# ppg-app

./: .gitignore  README.md  bitmask_test.py  pubspec.yaml  stream_test.dart
android/: CMakeLists.txt
android/app/: build.gradle
api/: .gitignore  requirements.txt
api/src/: app.py  config.py  data_preparation.py  db.py  heart_rate.py  higher_order_metrics.py  hrv_demographics.py  info.py  metrics_controller.py  metrics_rating.py  peak_extraction.py  ppg_points_controller.py  testing.py  time_domain_methods.py  visualization.py
app/: pubspec.yaml  stream_test.dart
app/android/: CMakeLists.txt
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/profile/: AndroidManifest.xml
app/ios/Classes/: CMakeLists.txt
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/ios/Runner.xcworkspace/: contents.xcworkspacedata
app/lib/: main.dart
app/web/: index.html  manifest.json
ios/Classes/: CMakeLists.txt  converter.h  ppg_calc.c  ppg_calc.h
ios/Classes/include/: converter.h  evaluator.h  ppg.h  verifier.h
ios/Classes/src/: calibrator.cpp  converter.cpp  main.cpp  ppg.cpp  verifier.cpp
lib/: app.dart  camera_page.dart  home_page.dart  main.dart
lib/interface/pages/: home_page.dart  scan_page.dart
lib/interface/widgets/: StressPanel.dart  chart.dart  graph.dart  measurement.dart  metric_list.dart  metric_view.dart  metrics.dart  stress_panel.dart
lib/logic/models/: frame_stats.dart  metric.dart  ppg_point.dart  scan.dart
lib/logic/services/: calibration_handler.dart  file_writer.dart  (+6 more)
test/: widget_test.dart
(+28 files in other folders)
